fixed column containers not in rows and contact section responsivness

--- a/index.html
+++ b/index.html
@@ -131,14 +131,13 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class = "col-lg-12 text-center px20-padding">
-                    <div class="px20-padding col-md-6 text-center">
-                        <a href="construction.html" class="page-scroll btn btn-default btn-xl sr-button" target="_blank">Z:>_ BLOG</a>
-                    </div>
-                    <div class = "px20-padding col-md-6 text-center">
-                        <button class="page-scroll btn btn-default btn-xl sr-button" data-toggle="modal" data-target="#resume">Z:>_ RESUME</button>
-                    </div>
+        	<div class="row">
+                <div class="px20-padding col-md-6 text-center">
+                    <a href="construction.html" class="page-scroll btn btn-default btn-xl sr-button" target="_blank">Z:>_ BLOG</a>
+                </div>
+                <div class = "px20-padding col-md-6 text-center">
+                    <button class="page-scroll btn btn-default btn-xl sr-button" data-toggle="modal" data-target="#resume">Z:>_ RESUME</button>
+                </div>
                 </div>
             </div>
         </div>
@@ -318,25 +317,23 @@
 <!-- Contact Secion -->
     <section class="bg-tertiary">
         <div class="container" id="contact">
-            <div class="row">
-                <div class="col-lg-8 col-md-10 col-sm-10 col-xs-12 bg-fade col-lg-offset-2 col-md-offset-1 col-sm-offset-1">
-                    <div class="col-lg-8 col-lg-offset-2 text-center text-faded">
-                        <h2 class="section-heading">Z:>_ Contact</h2>
-                        <hr class="primary">
-                        <p class="about_me_25">Contact me through your preferred method below and I will respond as soon as possible!</p>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3  col-lg-offset-2 col-md-offset-2 col-sm-offset-2 icon-box text-center">
-                        <a href="construction.html" target="_blank"><i class="fa fa-envelope-o fa-4x sr-contact icons_color"></i></a>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 icon-box text-center">
-                        <a href="http://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-4x sr-contact icons_color"></i></a>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 icon-box text-center">
-                        <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-4x sr-contact icons_color"></i></a>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 icon-box text-center">
-                        <a href="http://www.github.com" target="_blank"><i class="fa fa-github fa-4x sr-contact icons_color"></i></a>
-                    </div>
+            <div class="row bg-fade" id="contact_row">
+                <div class="col-lg-8 col-md-10 col-sm-10 col-xs-12 col-lg-offset-2 col-md-offset-1 col-sm-offset-1 text-faded text-center">
+                    <h2 class="section-heading">Z:>_ Contact</h2>
+                    <hr class="primary">
+                    <p class="about_me_25">Contact me through your preferred method below and I will respond as soon as possible!</p>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3  col-lg-offset-2 col-md-offset-2 col-sm-offset-2 icon-box text-center">
+                    <a href="construction.html" target="_blank"><i class="fa fa-envelope-o fa-4x sr-contact icons_color"></i></a>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 icon-box text-center">
+                    <a href="http://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-4x sr-contact icons_color"></i></a>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 icon-box text-center">
+                    <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-4x sr-contact icons_color"></i></a>
+                </div>
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 icon-box text-center">
+                    <a href="http://www.github.com" target="_blank"><i class="fa fa-github fa-4x sr-contact icons_color"></i></a>
                 </div>
             </div>
         </div>
